--- a/latex/ressources/R101.tex
+++ b/latex/ressources/R101.tex
@@ -9,15 +9,21 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{12}
+
 \ajoutRac{AC0113}{Configurer les fonctions de base du réseau local}
 \ajoutRac{AC0115}{Identifier les dysfonctionnements du réseau local}
 \ajoutRac{AC0116}{Installer un poste client}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{4}
+
 \ajoutRac{AC0213}{Déployer des supports de transmission}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{4}
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 % Les SAE
@@ -33,7 +39,7 @@ les compétences de cœur de métier ``Administrer les réseaux et
 l'Internet'' (RT1) et ``Connecter les entreprises et les usagers''
 (RT2). Elle contribue aussi à la compétence ``Créer des outils et
 applications informatiques pour les R\&T'' (RT3) à travers la découverte
-du poste client et de son environnement logiciel.
+du poste client et de son environnement logiciel.\\
 Cette ressource permet à l'étudiant de découvrir et déployer un premier
 système d'information au sein d'une entreprise. À travers des exercices
 de mise en place progressive de réseaux locaux, d'interconnection
@@ -41,18 +47,19 @@ d'équipements et de prise en main des fonctions de base des systèmes
 d'exploitation, l'étudiant découvrira les principaux concepts utilisés
 dans les réseaux informatiques, et commencera à comprendre le rôle et
 les principes des normes et protocoles essentiels des réseaux locaux,
-comme Ethernet, TCP/IP, DHCP, DNS.
+comme Ethernet, TCP/IP, DHCP, DNS.\\
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'ANSSI, CyberEdu, CyberMalveillance
 pourront servir de support).}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Initiation au réseau
   \begin{itemize}
-    \item
+  \item
     Découverte et prise en main du réseau local
   \item
     Adressage IPv4 : classes d'adresses, masques naturels, adressage
@@ -63,7 +70,7 @@ pourront servir de support).}
 \item
   Bases du système d'exploitation
   \begin{itemize}
-    \item
+  \item
     Architecture d'un système d'exploitation
   \item
     Différents types de systèmes d'exploitation : les clients, les
