--- a/latex/ressources/R105.tex
+++ b/latex/ressources/R105.tex
@@ -11,12 +11,18 @@
 
 
 
+
+
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
+
+\ajoutRcoeff{5}
 
 \ajoutRac{AC0211}{Mesurer et analyser les signaux}
 \ajoutRac{AC0213}{Déployer des supports de transmission}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+
 
 
 % Les SAE
@@ -29,12 +35,13 @@
 \ajoutRancrage{Cette ressource apporte les bases de connaissances et savoir-faire
 techniques pour la compétence ``connecter les entreprises et les
 usagers'' à travers les apprentissages critiques ``mesurer et analyser
-les signaux'' et ``déployer des supports de transmission''.
+les signaux'' et ``déployer des supports de transmission''.\\
 Il s'agit d'étudier les concepts fondamentaux des supports de
 transmission.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Types de support de transmission (réseau d'entreprise, réseau
