--- a/latex/ressources/R106.tex
+++ b/latex/ressources/R106.tex
@@ -9,13 +9,19 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{10}
+
 \ajoutRac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
 
 
+
+
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 % Les SAE
@@ -29,7 +35,7 @@
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
 les compétences de cœur de métier ``Administrer les réseaux et
 l'Internet'' (RT1) et " Créer des outils et applications informatiques
-pour les R\&T" (RT3).
+pour les R\&T" (RT3).\\
 Les systèmes informatiques et numériques sont au cœur de la spécialité
 Réseaux et Télécoms. Cette ressource vise tout d'abord à permettre la
 compréhension du codage et du stockage des données. Puis elle permet de
@@ -39,6 +45,7 @@ permettra aux étudiants de relier ces systèmes au monde extérieur.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Codage des nombres, des caractères, des images.
