--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -11,11 +11,17 @@
 
 
 
+
+
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
 
 
+
+
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{22}
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 \ajoutRac{AC0312}{Lire, exécuter, corriger et modifier un programme}
@@ -46,7 +52,7 @@ contenus suivants seront traités :
 \item
   Notions d'algorithmique :
   \begin{itemize}
-    \item
+  \item
     Variables, types de base (nombres, chaînes, listes/tableaux).
   \item
     Structures de contrôle : tests, répétitions.
