--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -9,6 +9,8 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{6}
+
 \ajoutRac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
 \ajoutRac{AC0116}{Installer un poste client}
 
@@ -16,7 +18,11 @@
 
 
 
+
+
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{7}
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 \ajoutRac{AC0312}{Lire, exécuter, corriger et modifier un programme}
@@ -28,12 +34,12 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource traite des bases de l'utilisation d'un poste client et
-de son système d'exploitation.
+de son système d'exploitation.\\
 Elle est essentielle pour la prise en main pratique d'un système
 informatique en abordant notamment la gestion des données dans un espace
 de stockage (organisation, recherche, droits) et la maîtrise d'un
 environnement numérique, deux thèmes attendus par le référentiel PIX
-(https://pix.fr/competences).
+(https://pix.fr/competences).\\
 Cette ressource introduit également un usage avancé du système
 d'exploitation nécessaire au besoin d'un professionnel R\&T. Elle vise
 la maîtrise de commandes en ligne pour gérer l'arborescence de fichiers,
@@ -42,12 +48,13 @@ pour exécuter un programme ou configurer les éléments d'un site Web
 (compétence RT3-Programmer). Elle vise également l'emploi des
 principales commandes réseau, dans des scripts simples. Ces commandes
 sont les bases d'appui pour administrer - par la suite - un réseau et de
-ses services (compétence RT1-Administrer).
+ses services (compétence RT1-Administrer).\\
 Elle contribue donc aux apprentissages critiques mentionnés
 précédemment.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Systèmes d'exploitations Windows/Linux, Interface-Homme-Machine et
