--- a/latex/ressources/R109.tex
+++ b/latex/ressources/R109.tex
@@ -11,11 +11,17 @@
 
 
 
+
+
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
 
 
+
+
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{4}
 
 \ajoutRac{AC0314}{Connaître l'architecture et les technologies d'un site Web}
 % Les SAE
@@ -30,7 +36,7 @@ contenus Web pour le site Web et l'intranet d'une entreprise. Grâce aux
 pages Web, il peut aisément mettre à disposition des collaborateurs les
 outils-métiers qu'il aura développés (compétence RT3-Programmer) et
 leurs documentations. Plus généralement, il pourra même développer une
-application Web.
+application Web.\\
 La présente ressource fournit les bases conceptuelles et pratiques pour
 écrire et modifier des pages Web dans un langage normalisé de
 description de contenus et de sa présentation. Elle traite donc de la
@@ -41,6 +47,7 @@ navigateur Web.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Utilisation avancée d'un navigateur Web
