--- a/latex/ressources/R113.tex
+++ b/latex/ressources/R113.tex
@@ -9,9 +9,13 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{5}
+
 \ajoutRac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
+
+\ajoutRcoeff{8}
 
 \ajoutRac{AC0211}{Mesurer et analyser les signaux}
 \ajoutRac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
@@ -19,10 +23,12 @@
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
 
 
+
+
 % Les SAE
 \ajoutRsae{SAÉ13}{Découvrir un dispositif de transmission}
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 
@@ -38,6 +44,7 @@ télécommunications.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Introduction aux signaux
@@ -57,14 +64,16 @@ télécommunications.}
   \item
     opérations sur les signaux : avance, retard, dilatation,
     amplification, offset (interprétation géométrique
-    sur le graphe), somme de signaux Cette partie sera l'occasion de
-    réviser les règles de calculs de base par l'intermédiaire du calcul
-    d'images et d'antécédents.
+    sur le graphe), somme de signaux
   \end{itemize}
+\end{itemize}
+Cette partie sera l'occasion de réviser les règles de calculs de base
+par l'intermédiaire du calcul d'images et d'antécédents.
+\begin{itemize}
 \item
   Éléments de trigonométrie
   \begin{itemize}
-    \item
+  \item
     définition du radian
   \item
     cercle trigonométrique
@@ -77,7 +86,7 @@ télécommunications.}
 \item
   Signaux périodiques
   \begin{itemize}
-    \item
+  \item
     période, fréquence, pulsation
   \item
     signaux périodiques de base : créneau, dent de scie, sinus,
