--- a/latex/ressources/R114.tex
+++ b/latex/ressources/R114.tex
@@ -9,9 +9,13 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{4}
+
 \ajoutRac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
+
+\ajoutRcoeff{8}
 
 \ajoutRac{AC0211}{Mesurer et analyser les signaux}
 \ajoutRac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
@@ -19,10 +23,12 @@
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
 
 
+
+
 % Les SAE
 \ajoutRsae{SAÉ13}{Découvrir un dispositif de transmission}
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R113}{Mathématiques du signal}
@@ -39,11 +45,12 @@ lien avec l'électronique et les télécommunications.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Trigonométrie
   \begin{itemize}
-    \item
+  \item
     formules \(\cos(a\pm b)\), \(\cos(a)\cos(b)\), \(cos^2(a)\) ; même
     formules avec sinus
   \item
@@ -57,7 +64,7 @@ lien avec l'électronique et les télécommunications.}
 \item
   Fonctions logarithme et exponentielle, puissances
   \begin{itemize}
-    \item
+  \item
     graphes
   \item
     propriétés, retour sur les propriétés des puissances
@@ -67,7 +74,7 @@ lien avec l'électronique et les télécommunications.}
 \item
   Nombres complexes
   \begin{itemize}
-    \item
+  \item
     forme algébrique
   \item
     addition, multiplication et division avec la forme algébrique
