--- a/latex/ressources/R115.tex
+++ b/latex/ressources/R115.tex
@@ -11,11 +11,17 @@
 
 
 
+
+
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
+
+\ajoutRcoeff{2}
 
 \ajoutRac{AC0215}{Communiquer avec un client ou un collaborateur}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{4}
 
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
