--- a/latex/ressources/R203.tex
+++ b/latex/ressources/R203.tex
@@ -9,6 +9,8 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{12}
+
 \ajoutRac{AC0113}{Configurer les fonctions de base du réseau local}
 \ajoutRac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
 \ajoutRac{AC0115}{Identifier les dysfonctionnements du réseau local}
@@ -17,12 +19,16 @@
 
 
 
+
+
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+
 
 
 % Les SAE
 \ajoutRsae{SAÉ21}{Construire un réseau informatique pour une petite structure}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R101}{Initiation aux réseaux informatiques}
@@ -32,19 +38,20 @@
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte les connaissances et compétences de base
 nécessaires à la mise en oeuvre des services réseaux dans un système
-d'information
+d'information\\
 Les services abordés sont des services essentiels à tout SI tels que le
 DNS, le DHCP ou le transfert de fichiers pour les configurations
 d'appareils réseaux pour n'en citer que quelques-uns. Cette découverte
 des premiers protocoles applicatifs permettra également de sensibiliser
 les étudiants aux risques de sécurité liés à la configuration de ces
-services
+services\\
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'ANSSI, CyberEdu, CyberMalveillance
 pourront servir de support).}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Rappels sur les protocoles de transport (TCP, UDP)
