--- a/latex/ressources/R205.tex
+++ b/latex/ressources/R205.tex
@@ -9,14 +9,20 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{2}
+
 \ajoutRac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
+
+\ajoutRcoeff{12}
 
 \ajoutRac{AC0211}{Mesurer et analyser les signaux}
 \ajoutRac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+
 
 
 % Les SAE
@@ -30,10 +36,10 @@
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
 les compétences de cœur de métier ``Administrer les réseaux et
-l'Internet'' (RT1) et ``Connecter les entreprises et les usagers'' (RT2)
+l'Internet'' (RT1) et ``Connecter les entreprises et les usagers'' (RT2)\\
 La caractérisation du comportement d'un système télécom en fonction de
 la fréquence permet au technicien d'appréhender la notion de bande
-passante et d'introduire celle de canal de transmission.
+passante et d'introduire celle de canal de transmission.\\
 La représentation spectrale des signaux permet de comprendre quelles
 modifications ces signaux vont subir dans un système télécom.}
 
@@ -41,11 +47,11 @@ modifications ces signaux vont subir dans un système télécom.}
 \ajoutRcontenudetaille{
 Étude de la fonction de transfert d'un système linéaire -- Notion de
 filtrage -- Réponse fréquentielle d'un support de transmission -- Notion
-de bande passante. Atténuation, amplification des systèmes.
+de bande passante. Atténuation, amplification des systèmes.\\
 Représentations temporelles et fréquentielles des signaux - Analyse
-spectrale de signaux réels (exemples : audio, WiFi, ADSL, etc.).
+spectrale de signaux réels (exemples : audio, WiFi, ADSL, etc.).\\
 Influence de la fonction de transfert d'un système sur un signal
-(exemples : audio, numérique, \ldots)
+(exemples : audio, numérique, \ldots)\\
 Bilans de liaison de systèmes de transmissions
 }
 
