--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -9,14 +9,20 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+
+
 \ajoutRac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
+
+\ajoutRcoeff{10}
 
 \ajoutRac{AC0211}{Mesurer et analyser les signaux}
 \ajoutRac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+
 
 
 % Les SAE
@@ -30,7 +36,7 @@
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
 les compétences de cœur de métier ``Administrer les réseaux et
-l'Internet'' (RT1) et ``Connecter les entreprises et les usagers'' (RT2)
+l'Internet'' (RT1) et ``Connecter les entreprises et les usagers'' (RT2)\\
 Les systèmes de Réseaux et Télécoms véhiculent en permanence de données
 numérisées. Ce module vient donc présenter les principes de la
 numérisation de l'information, les contraintes de cette numérisation et
@@ -39,6 +45,7 @@ en téléphonie, ou en télécommunications numériques.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Comprendre la notion de signal numérique, et le principe de la
