--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -9,13 +9,19 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{0}
+
 \ajoutRac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
 
 
+
+
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{10}
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 \ajoutRac{AC0312}{Lire, exécuter, corriger et modifier un programme}
@@ -25,7 +31,7 @@
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
 \ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R107}{Fondamentaux de la programmation}
@@ -43,7 +49,7 @@ PIX, cf.~https://pix.fr/competences), mais aussi à les traiter en
 développant différents outils informatiques pour ses besoins personnels
 ou pour son équipe (compétence RT3-Programmer). Plus largement, il
 contribue activement à l'exploitation et à la maintenance du système
-d'information de l' entreprise.
+d'information de l' entreprise.\\
 Cette ressource introduit les éléments fondamentaux des systèmes de
 gestion de base de données en contribuant à la validation des
 apprentissages critiques mentionnés précédemment. Elle présente
@@ -54,11 +60,12 @@ introduits.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Stockage et accès aux données :
   \begin{itemize}
-    \item
+  \item
     système de gestion de données (relationnel/non relationnel);
   \item
     structuration des données: fichiers (CSV, JSON), exemples de sources
@@ -70,7 +77,7 @@ introduits.}
 \item
   Base de données relationnelles :
   \begin{itemize}
-    \item
+  \item
     Schéma relationnel d'une base de données
   \item
     Sensibilisation aux contraintes d'intégrité
