--- a/latex/ressources/R208.tex
+++ b/latex/ressources/R208.tex
@@ -11,11 +11,17 @@
 
 
 
+
+
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
 
 
+
+
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{10}
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 \ajoutRac{AC0312}{Lire, exécuter, corriger et modifier un programme}
@@ -24,7 +30,7 @@
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
 \ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R010}{None}
@@ -43,6 +49,7 @@ précédemment.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Structure d'un programme : arborescence de fichiers, modules et
@@ -52,7 +59,7 @@ précédemment.}
 \item
   Structure complexe de données :
   \begin{itemize}
-    \item
+  \item
     listes 2D, tableaux associatifs/dictionnaires
   \item
     notion de classes (instance, attributs, méthodes)
@@ -60,7 +67,7 @@ précédemment.}
 \item
   Manipulation de fichiers avancée :
   \begin{itemize}
-    \item
+  \item
     fichiers structurés (XML, CSV, JSON, YAML)
   \item
     gestion de l'arborescence par le code
