--- a/latex/ressources/R209.tex
+++ b/latex/ressources/R209.tex
@@ -9,6 +9,8 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{2}
+
 \ajoutRac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
 \ajoutRac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
 
@@ -16,7 +18,11 @@
 
 
 
+
+
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{10}
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 \ajoutRac{AC0312}{Lire, exécuter, corriger et modifier un programme}
@@ -26,7 +32,7 @@
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
 \ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R107}{Fondamentaux de la programmation}
@@ -38,7 +44,7 @@
 \ajoutRancrage{Le professionnel R\&T peut être amené à développer, pour ses besoins
 personnels ou pour ses collaborateurs, un site Web (compétence
 RT3-Programmer), par exemple pour fournir une interface de présentation
-du réseau informatique.
+du réseau informatique.\\
 Il doit en appréhender tous les éléments : il doit aussi bien connaître
 les protocoles de communication du Web que veiller à la sécurité de
 ceux-ci. Il doit également pouvoir accéder, traiter et afficher des
@@ -48,13 +54,14 @@ contribue de fait aux apprentissages critiques mentionnés précédemment.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Introduction au protocole HTTP
 \item
   Mise en forme de pages Web :
   \begin{itemize}
-    \item
+  \item
     Balises HTML avancées
   \item
     Structure d'une page avec son DOM
