--- a/latex/ressources/R213.tex
+++ b/latex/ressources/R213.tex
@@ -9,20 +9,26 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{3}
+
 \ajoutRac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{5}
+
 \ajoutRac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{5}
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 \ajoutRac{AC0313}{Traduire un algorithme, dans un langage et pour un environnement donné}
 % Les SAE
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
 \ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 
@@ -36,11 +42,12 @@ l'exploitation d'algorithmes mis en œuvre via un outil informatique.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
-  Suites, récurrence, signal numérique
+  ) Suites, récurrence, signal numérique
   \begin{itemize}
-    \item
+  \item
     raisonnement par récurrence
   \item
     suites récurrentes
@@ -48,11 +55,11 @@ l'exploitation d'algorithmes mis en œuvre via un outil informatique.}
     signal discret (exemples : Kronecker, échelon échantillonné\ldots)
   \item
     convergence d'une suite (opérations sur les limites)
-  \end{itemize}
-\item
-  Vecteurs en 2D et 3D
-  \begin{itemize}
-    \item
+    \begin{itemize}
+        \item
+      ) Vecteurs en D et 3D
+    \end{itemize}
+  \item
     définitions
   \item
     opérations (addition et multiplication externe)
@@ -60,11 +67,11 @@ l'exploitation d'algorithmes mis en œuvre via un outil informatique.}
     produit scalaire (lien avec la trigonométrie)
   \item
     application au calcul d'une équation de droite
-  \end{itemize}
-\item
-  Matrices et vecteurs
-  \begin{itemize}
-    \item
+    \begin{itemize}
+        \item
+      ) Matrices et vecteurs
+    \end{itemize}
+  \item
     définition
   \item
     opérations
