--- a/python/pn/modele_ressource.tex
+++ b/python/pn/modele_ressource.tex
@@ -9,13 +9,19 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+#coeffRT1
+
 #compRT1
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+#coeffRT2
+
 #compRT2
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+#coeffRT3
 
 #compRT3
 % Les SAE
