--- a/python/pn/modele_sae.tex
+++ b/python/pn/modele_sae.tex
@@ -10,20 +10,24 @@
 %% Les compétences et les ACs
 \ajoutScompetence{RT1-Administrer}{\niveauA}
 
+#coeffRT1
+
 #compRT1
 
 \ajoutScompetence{RT2-Connecter}{\niveauA}
+
+#coeffRT2
 
 #compRT2
 
 \ajoutScompetence{RT3-Programmer}{\niveauA}
 
+#coeffRT3
+
 #compRT3
 
 % Le description
-\ajoutSdescription{
-#description
-}
+\ajoutSdescription{#description}
 
 % Les ressources
 #ressources
