--- a/latex/ressources/R102.tex
+++ b/latex/ressources/R102.tex
@@ -9,6 +9,8 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{12}
+
 \ajoutRac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
 \ajoutRac{AC0115}{Identifier les dysfonctionnements du réseau local}
 
@@ -16,7 +18,11 @@
 
 
 
+
+
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+
 
 
 % Les SAE
@@ -31,7 +37,7 @@
 \ajoutRancrage{Cette ressource a pour objectif de donner à l'étudiant un cadre commun
 et intégratif de l'ensemble des mécanismes nécessaires au fonctionnement
 des réseaux informatiques. Ce cadre général est essentiel, et sert de
-référence à l'ensemble des autres ressources réseaux.
+référence à l'ensemble des autres ressources réseaux.\\
 Elle participe principalement à la compétence RT1-Administrer les
 réseaux et l'Internet à travers la compréhension et l'utilisation de la
 partie réseau des systèmes d'exploitation, la compréhension de
@@ -40,6 +46,7 @@ les notions de services rendus et de performance du réseau.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Approche en couches et encapsulation.
@@ -58,7 +65,7 @@ les notions de services rendus et de performance du réseau.}
 \end{itemize}
 Outils préconisés : logiciels du type wireshark, gns3, packet tracer,
 scapy, marionnet.Faire le lien avec les aspects sécurité informatique et
-réseaux mentionnés en R101.
+réseaux mentionnés en R101.\\
 Des éléments relatifs à la sécurité et aux risques informatiques et
 réseaux seront progressivement introduits au travers des différents
 contenus étudiés afin que ces éléments deviennent une préoccupation
