--- a/latex/ressources/R103.tex
+++ b/latex/ressources/R103.tex
@@ -9,15 +9,21 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{8}
+
 \ajoutRac{AC0113}{Configurer les fonctions de base du réseau local}
 \ajoutRac{AC0115}{Identifier les dysfonctionnements du réseau local}
 \ajoutRac{AC0116}{Installer un poste client}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{4}
+
 \ajoutRac{AC0213}{Déployer des supports de transmission}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{0}
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 % Les SAE
@@ -33,7 +39,7 @@ les compétences de cœur de métier ``Administrer les réseaux et
 l'Internet'' (RT1). Elle vise à fournir à l'étudiant les connaissances
 et les compétences indispensables pour pouvoir concevoir, déployer et
 maintenir l'infrastructure réseau informatique de l'entreprise
-(Ethernet)
+(Ethernet)\\
 Au niveau de la compétence RT2-Connecter, elle aborde les notions
 d'exploitation du câblage (brassage). La compétence RT1-Administrer est
 quant à elle renforcée à travers la mise en place et la configuration de
@@ -44,20 +50,21 @@ support (segmentation physique et virtuelle (VLAN)). Ces deux
 compétences s'appuient sur la compréhension des mécanismes intrinsèques
 aux réseaux locaux Ethernet : adressage MAC, commutation/routage de
 niveau 2, ARP, passage d'un type de support physique à un autre,
-changements de débit, \ldots{}
+changements de débit, \ldots{}\\
 Elle contribue aussi à la compétence ``Créer des outils et applications
 informatiques pour les R\&T'' (RT3) à travers la découverte du poste
 client et de son environnement logiciel.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Câblage réseaux.
 \item
   Différentes topologies physiques et logiques.
 \item
-  Normalisation Ethernet 802 (802.1, 802.2, 802..
+  Normalisation Ethernet 802 (802.1, 802.2, 802.3).
 \item
   Commutation Ethernet : apprentissage des adresses MAC, diffusion,
   Broadcast.
