--- a/latex/ressources/R104.tex
+++ b/latex/ressources/R104.tex
@@ -9,13 +9,19 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{9}
+
 \ajoutRac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{5}
+
 \ajoutRac{AC0211}{Mesurer et analyser les signaux}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+
 
 
 % Les SAE
@@ -28,20 +34,21 @@
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
 les compétences de cœur de métier ``Administrer les réseaux et
 l'Internet'' (RT1) et ``Connecter les entreprises et les usagers''
-(RT2).
+(RT2).\\
 La connaissance des phénomènes électriques, la maîtrise des grandeurs
 électriques et de leurs mesures, ainsi que la notion de puissance
 permettent à l'étudiant de comprendre le fonctionnement des systèmes
-télécom et de travailler sur les signaux.
+télécom et de travailler sur les signaux.\\
 Les notions de dimensionnement électrique concourent à la sécurité du
 fonctionnement des équipements réseaux et télécoms. La puissance
-maximale permet d'aborder les problèmes d'adaptation d'impédance.
+maximale permet d'aborder les problèmes d'adaptation d'impédance.\\
 A travers des exercices de mise en place de circuits simples, les
 étudiants seront capables d'implanter des circuits, de placer les
 instruments de mesure et d'interpréter les résultats.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Lois de base de l'électricité, théorèmes fondamentaux, pont diviseur
