--- a/latex/ressources/R110.tex
+++ b/latex/ressources/R110.tex
@@ -9,13 +9,19 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{3}
+
 \ajoutRac{AC0115}{Identifier les dysfonctionnements du réseau local}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{5}
+
 \ajoutRac{AC0215}{Communiquer avec un client ou un collaborateur}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{5}
 
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
