--- a/latex/ressources/R111.tex
+++ b/latex/ressources/R111.tex
@@ -9,13 +9,19 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{4}
+
 \ajoutRac{AC0116}{Installer un poste client}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{4}
+
 \ajoutRac{AC0215}{Communiquer avec un client ou un collaborateur}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{4}
 
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
@@ -41,6 +47,7 @@ l'importance des savoir-être et aux enjeux du développement durable.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Rechercher, sélectionner ses sources et questionner leur fiabilité
