--- a/latex/ressources/R112.tex
+++ b/latex/ressources/R112.tex
@@ -4,18 +4,24 @@
 
 \nouvelleressource{R112}{Projet Personnel et Professionnel}
 
-\ajoutRheures{18}{15}
+\ajoutRheures{15}{12}
 
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
+
+\ajoutRcoeff{3}
 
 \ajoutRac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{3}
+
 \ajoutRac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{3}
 
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 % Les SAE
@@ -29,6 +35,7 @@
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   s'approprier son champ d'activité;
@@ -45,6 +52,33 @@
   amener les étudiants à se projeter en tant que professionnels;
 \item
   découvrir le portfolio et son utilisation dans la formation.
+\end{itemize}
+PROPOSITION ADIUT :
+\begin{itemize}
+\item
+  d'avoir une compréhension exhaustive du référentiel de compétences de
+  la formation et des éléments
+  le structurant (composantes essentielles, niveaux, apprentissages
+  critiques, famille de situations)
+  ;
+  \begin{itemize}
+  \item
+    de faire le lien entre les niveaux de compétences ciblés, les SAÉ et
+    les ressources au programme
+    de chaque semestre ;
+  \item
+    de découvrir les métiers associés à la spécialité et les
+    environnements professionnels correspondants
+    ;
+  \item
+    de se positionner sur un des parcours de la spécialité lorsque ces
+    parcours sont proposés en seconde
+    année ;
+  \item
+    de mobiliser les techniques de recrutement dans le cadre d'une
+    recherche de stage ou d'un contrat
+    d'alternance.
+  \end{itemize}
 \end{itemize}
 Activités notamment proposées dans cette ressource :
 \begin{itemize}
