--- a/latex/ressources/R201.tex
+++ b/latex/ressources/R201.tex
@@ -9,20 +9,26 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{19}
+
 \ajoutRac{AC0113}{Configurer les fonctions de base du réseau local}
 \ajoutRac{AC0115}{Identifier les dysfonctionnements du réseau local}
 \ajoutRac{AC0116}{Installer un poste client}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{4}
+
 \ajoutRac{AC0213}{Déployer des supports de transmission}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
 
+\ajoutRcoeff{0}
+
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 % Les SAE
 \ajoutRsae{SAÉ21}{Construire un réseau informatique pour une petite structure}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R101}{Initiation aux réseaux informatiques}
@@ -37,16 +43,17 @@ l'Internet'' (RT1) et ``Connecter les entreprises et les usagers''
 compétences indispensables pour pouvoir concevoir, déployer et maintenir
 les infrastructures réseaux grande distance (Internet), plus précisément
 l'adressage, le routage et le transport de paquets. Une première
-approche du filtrage (sécurité) y est aussi abordée.
+approche du filtrage (sécurité) y est aussi abordée.\\
 Elle contribue aussi à la compétence ``Créer des outils et applications
 informatiques pour les R\&T'' (RT3) à travers la découverte du poste
-client et de son environnement logiciel.
+client et de son environnement logiciel.\\
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'ANSSI, CyberEdu, CyberMalveillance
 pourront servir de support)}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Protocole et adressage IPv4\&6.
