--- a/latex/ressources/R204.tex
+++ b/latex/ressources/R204.tex
@@ -9,19 +9,25 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{8}
+
 \ajoutRac{AC0113}{Configurer les fonctions de base du réseau local}
 \ajoutRac{AC0115}{Identifier les dysfonctionnements du réseau local}
 \ajoutRac{AC0116}{Installer un poste client}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{4}
+
 \ajoutRac{AC0213}{Déployer des supports de transmission}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
 
+\ajoutRcoeff{0}
+
 \ajoutRac{AC0311}{Utiliser un système informatique et ses outils}
 % Les SAE
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R101}{Initiation aux réseaux informatiques}
@@ -34,12 +40,13 @@ d'aborder les différents types de téléphonie (hors téléphonie mobile)
 utilisés de nos jours, que ce soit sur un réseau dédié (téléphonie
 analogique, numérique) ou un réseau partagé (ToIP). Une découverte des
 services téléphoniques utiles à la communication dans l'entreprise sera
-réalisée, ainsi qu'une première approche des réseaux publics existants.
+réalisée, ainsi qu'une première approche des réseaux publics existants.\\
 En fonction du contexte local, on pourra orienter l'étude vers un réseau
 téléphonique mixte (TDM/IP) ou TOIP.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Présentation des principes généraux de la téléphonie.
