--- a/latex/ressources/R210.tex
+++ b/latex/ressources/R210.tex
@@ -9,21 +9,27 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{3}
+
 \ajoutRac{AC0112}{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}
 \ajoutRac{AC0114}{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{9}
+
 \ajoutRac{AC0215}{Communiquer avec un client ou un collaborateur}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{7}
 
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
 \ajoutRsae{SAÉ21}{Construire un réseau informatique pour une petite structure}
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
 \ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R110}{Anglais de communication et initiation au vocabulaire technique}
