--- a/latex/ressources/R211.tex
+++ b/latex/ressources/R211.tex
@@ -9,20 +9,26 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{3}
+
 \ajoutRac{AC0115}{Identifier les dysfonctionnements du réseau local}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
 
+\ajoutRcoeff{5}
+
 \ajoutRac{AC0215}{Communiquer avec un client ou un collaborateur}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
+
+\ajoutRcoeff{4}
 
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
 \ajoutRsae{SAÉ21}{Construire un réseau informatique pour une petite structure}
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
 \ajoutRsae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R111}{Expression-Culture-Communication Professionnelles 1}
@@ -32,6 +38,7 @@
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   Utiliser les outils et ressources documentaires de manière
