--- a/latex/ressources/R212.tex
+++ b/latex/ressources/R212.tex
@@ -9,17 +9,23 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{1}
+
 \ajoutRac{AC0115}{Identifier les dysfonctionnements du réseau local}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
+
+\ajoutRcoeff{3}
 
 \ajoutRac{AC0215}{Communiquer avec un client ou un collaborateur}
 
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
 
+\ajoutRcoeff{2}
+
 \ajoutRac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 % Les SAE
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R112}{Projet Personnel et Professionnel}
@@ -29,6 +35,7 @@
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
   se caractériser pour préparer son stage ou son alternance
