--- a/latex/ressources/R214.tex
+++ b/latex/ressources/R214.tex
@@ -9,9 +9,13 @@
 %% Les compétences et les ACs
 \ajoutRcompetence{RT1-Administrer}{\niveauA}
 
+\ajoutRcoeff{3}
+
 \ajoutRac{AC0111}{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}
 
 \ajoutRcompetence{RT2-Connecter}{\niveauA}
+
+\ajoutRcoeff{9}
 
 \ajoutRac{AC0211}{Mesurer et analyser les signaux}
 \ajoutRac{AC0212}{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}
@@ -19,9 +23,11 @@
 \ajoutRcompetence{RT3-Programmer}{\niveauA}
 
 
+
+
 % Les SAE
 \ajoutRsae{SAÉ22}{Mesurer et caractériser un signal ou un système}
-\ajoutRsae{SAÉ24}{Projet intégratif de S2}
+\ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
 \ajoutRprerequis{R113}{Mathématiques du signal}
@@ -39,11 +45,12 @@ télécommunications.}
 
 % Contenus
 \ajoutRcontenudetaille{
+\vspace{-5pt}
 \begin{itemize}
 \item
-  Dérivée
+  ) Dérivée
   \begin{itemize}
-    \item
+  \item
     définition
   \item
     notation s'(t)=ds/dt
@@ -57,19 +64,19 @@ télécommunications.}
     sens de variation
   \item
     application à la recherche d'optimum local
-  \end{itemize}
-\item
-  Comportement local et asymptotique
-  \begin{itemize}
-    \item
+    \begin{itemize}
+        \item
+      ) Comportement local et asymptotique
+    \end{itemize}
+  \item
     limites (opérations, formes indéterminées)
   \item
     fonctions négligeables, équivalents
-  \end{itemize}
-\item
-  Intégration
-  \begin{itemize}
-    \item
+    \begin{itemize}
+        \item
+      ) Intégration
+    \end{itemize}
+  \item
     définition d'une intégrale comme une surface
   \item
     primitive
